updated .loop and if syntax, more improvements